--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Install Dependencies
       run: npm ci  # Use npm ci for clean, reproducible builds
     
+    - name: Run Linter
+      run: npm run lint
+    
     - name: Build Project
       run: npm run build
     
